Update another img path

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ header {
 }
 
 .title {
-  background: url(../img/trunk.jpg) no-repeat center center fixed;
+  background: url(../img/trunk.JPG) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
