--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,10 @@ color: white;
 }
 
 @media only screen and (max-width: 600px) {
+    .bio {
+        grid-gap: 2rem;
+    }
+
   .bio > div {
     overflow: hidden;
   }
