--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ header {
 
 @media only screen and (max-width: 600px) {
   .title {
-    background: url(../img/trunk.JPG) no-repeat center bottom fixed;
+    background: url(../img/trunk-mobile.JPG) no-repeat center bottom fixed;
   }
 }
 
@@ -307,14 +307,137 @@ color: white;
     color: white;
 }
 
+#bioitem1 {
+    grid-row: 1;
+    grid-column: 3/span 3;
+    z-index: 3;
+}
+
+#bioitem2 {
+    grid-row: 1/span 2;
+    grid-column: 4/span 2;
+    z-index: 1;
+}
+
+#bioitem3 {
+    grid-row: 2/span 2;
+    grid-column: 1/span 2;
+    z-index: 1;
+}
+
+#bioitem4 {
+    grid-row: 3/span 2;
+    grid-column: 2/span 3;
+    z-index: 2;
+    align-self: start;
+}
+
+#bioitem5 {
+    grid-row: 5;
+    grid-column: 1/span 2;
+    font-size: 16px;
+    align-self: start;
+}
+
+#bioitem6 {
+    grid-row: 5;
+    grid-column: 3/span 3;
+    z-index: 2;
+    text-align: right;
+    align-self: end;
+}
+
+#bioitem7 {
+    grid-row: 5/span 2;
+    grid-column: 4/span 2;
+    z-index: 1;
+    align-self: center;
+}
+
+#bioitem7 img {
+    max-width: 80%;
+    margin: auto;
+}
+
+#bioitem8 {
+    grid-row: 6;
+    grid-column: 1/span 5;
+    z-index: 2;
+    align-self: end;
+    font-size: 14px;
+}
+
 @media only screen and (max-width: 600px) {
     .bio {
         grid-gap: 3rem;
+        grid-template-columns: 1fr 2fr;
     }
 
-  .bio > div {
-    overflow: hidden;
-  }
+    .bio > div {
+        overflow: hidden;
+    }
+
+    #bioitem1 {
+        grid-row: 1;
+        grid-column: 1/span 2;
+        z-index: 3;
+        font-size: 18px;
+    }
+
+    #bioitem2 {
+        grid-row: 2;
+        grid-column: 1/span 2;
+        z-index: 1;
+    }
+
+    #bioitem2 img {
+        opacity: 100%;
+    }
+
+    #bioitem3 {
+        grid-row: 4;
+        grid-column: 1/span 2;
+        z-index: 1;
+    }
+
+    #bioitem3 img {
+        opacity: 100%;
+    }
+
+    #bioitem4 {
+        grid-row: 3;
+        grid-column: 1/span 2;
+    }
+
+    #bioitem5 {
+        grid-row: 5;
+        grid-column: 1/span 2;
+        align-self: end;
+        z-index: 2;
+    }
+
+    #bioitem6 {
+        grid-row: 6;
+        grid-column: 1/span 2;
+        text-align: left;
+    }
+
+    #bioitem7 {
+        grid-row: 7;
+        grid-column: 1/span 2;
+    }
+
+    #bioitem7 img {
+        opacity: 100%;
+        max-width: 100%;
+        margin: auto;
+    }
+
+    #bioitem8 {
+        grid-row: 8;
+        grid-column: 1/span 2;
+        font-size: 1em;
+    }
 }
 
 
