added cassette and recent review link to header

--- a/css/style.css
+++ b/css/style.css
@@ -353,8 +353,31 @@ header {
   }
 }
 
-.title-container {
+.header {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: auto;
+    grid-gap: 3rem;
+}
+
+
+
+/*.title-container {
     margin: auto;
+}*/
+
+
+/*.promo-container {
+    margin-right: 10px;
+    max-width: 200px;
+}*/
+
+#header-title {
+    grid-row: 1;
+    grid-column: 1/span 3;
+    z-index: 2;
+    text-align: center;
+    align-self: center;
 }
 
 .title-icon {
@@ -370,6 +393,122 @@ header {
   text-align: center;
   font-weight: 100;
 }
+
+#header-image-promo {
+    grid-row: 1;
+    grid-column: 1;
+    text-align: end;
+    self-align: end;
+    z-index: 3;
+}
+
+#header-image-promo img {
+    max-width: 150px;
+}
+
+#header-image-promo img:hover {
+    filter: brightness(0.92);
+}
+
+@keyframes wiggle {
+    0% { transform: rotate(0deg); }
+   80% { transform: rotate(0deg); }
+   85% { transform: rotate(2deg); }
+   95% { transform: rotate(-2deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.wiggle {
+  display: inline-block;
+  animation: wiggle 5s infinite;
+}
+
+.wiggle:hover {
+  animation: none;
+}
+
+#header-text-promo {
+    grid-row: 2;
+    grid-column: 2;
+    align-self: center;
+    text-align: center;
+    z-index: 3;
+}
+
+#header-text-promo img {
+    max-width: 400px;
+}
+
+#header-text-promo img:hover {
+    opacity: 80%;
+}
+
+
+.fading {
+    opacity: 1;
+    animation: fade 10s infinite;
+}
+
+@keyframes fade {
+  0% { opacity: 70% }
+  50% { opacity: 90% }
+  100% { opacity: 70% }
+}
+
+@media only screen and (max-width: 600px) {
+    .header {
+        grid-template-columns: 1fr;
+        grid-gap: 3rem;
+    }
+
+    #header-title {
+        grid-row: 1;
+        grid-column: 1;
+    }
+
+    .title-icon {
+        margin: 1em auto 0 auto;
+    }
+
+    #header-image-promo {
+        grid-row: 3;
+        grid-column: 1;
+        text-align: center;
+    }
+
+    #header-image-promo img {
+        max-width: 200px;
+
+    }
+
+    #header-text-promo {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    #header-text-promo img {
+        max-width: 100%;
+    }
+}
+
+/*@keyframes wave {
+     from {
+         transform: translateY(0);
+    }
+     to {
+         transform: translateY(-20px);
+    }
+}
+
+.wavetext span {
+     display: inline-block;
+     animation-duration: 2s;
+     animation-name: wave;
+     animation-iteration-count: infinite;
+     animation-direction: alternate;
+     transform: rotate(20deg);
+}*/
+
 
 /* bio section */
 
@@ -592,6 +731,7 @@ text-decoration-style: wavy; */
         grid-column: 1;
     }
 }
+
 
 
 
