--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
     box-sizing: border-box;
 }
 
-/* Custom Properties, update these for your own design */
-
 :root {
     --ff-primary: 'Courier Prime', sans-serif;
     --ff-secondary: 'Source Code Pro', monospace;
@@ -35,12 +33,10 @@
     }
 }
 
-/* General styles */
-
-/* endable this to add smooth scrolling */
+/* enable this to add smooth scrolling */
 /* html {
     scroll-behavior: smooth;
-} */
+}*/
 
 
 body {
@@ -102,149 +98,37 @@ h2 { font-size: var(--fs-h2) }
 h3 { font-size: var(--fs-h3) }
 
 
-.section__title {
-    margin-bottom: .25em;
+/* Social icons */
+
+.social-list__link:hover {
+    opacity: .7;
 }
 
-.section__title--intro {
-    font-weight: var(--fw-reg);
+.footer__link:hover {
+    text-decoration: underline;
 }
 
-.section__title--intro strong {
-    display: block;
-}
-
-.section__subtitle {
-    margin: 0;
-    font-size: var(--fs-h3);
-}
-
-.section__subtitle--intro,
-.section__subtitle--about {
-    background: var(--clr-accent);
-    padding: .25em 1em;
-    font-family: var(--ff-secondary);
-    margin-bottom: 1em;
-}
-
-.section__subtitle--work {
-    color: var(--clr-accent);
-    font-weight: var(--fw-bold);
-    margin-bottom: 2em;
-}
-
-/* header */
-
-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
-}
-
-.logo {
-    max-width: 100px;
-}
-
-.nav {
-    position: fixed;
-    background: var(--clr-dark);
-    color: var(--clr-light);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
-}
-
-.nav__list {
+.social-list {
     list-style: none;
     display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0;
+    justify-content: center;
+    margin: 2em 0 0;
     padding: 0;
+    max-width: 100%;
 }
 
-.nav__link {
-    color: inherit;
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-h2);
-    text-decoration: none;
+.social-list__item {
+    margin: 0 .5em;
 }
 
-.nav__link:hover {
-    color: var(--clr-accent);
-}
-
-.nav-toggle {
+.social-list__link {
     padding: .5em;
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    position: absolute;
-    right: 1em;
-    top: 1em;
-    z-index: 1000;
+    color: white;
 }
 
-.nav-open .nav {
-    transform: translateX(0);
-}
+/* Image hover effects */
 
-.nav-open .nav-toggle {
-    position: fixed;
-}
-
-.nav-open .hamburger {
-    transform: rotate(.625turn);
-}
-
-.nav-open .hamburger::before {
-    transform: rotate(90deg) translateX(-6px);
-}
-
-.nav-open .hamburger::after {
-    opacity: 0;
-}
-
-
-
-
-
-
-.hamburger {
-    display: block;
-    position: relative;
-}
-
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-    background: var(--clr-accent);
-    width: 2em;
-    height: 3px;
-    border-radius: 1em;
-    transition: transform 250ms ease-in-out;
-}
-
-
-.hamburger::before,
-.hamburger::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-}
-
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
-
-/* pulsing image */
+/* Pulse */
 
 .pulse img:hover{
   animation: pulse 1s infinite;
@@ -258,7 +142,7 @@ header {
   }
 }
 
-/* glitter image hover overlay */
+/* Glitter overlay */
 
 .content{
   position: relative;
@@ -333,7 +217,43 @@ header {
   opacity: 1;
 }
 
-/* title section */
+/* Image effects */
+
+/* Wiggle */
+
+.wiggle {
+  display: inline-block;
+  animation: wiggle 3s infinite;
+}
+
+.wiggle:hover {
+  animation: none;
+}
+
+@keyframes wiggle {
+    0% { transform: rotate(0deg); }
+   80% { transform: rotate(0deg); }
+   85% { transform: rotate(2deg); }
+   95% { transform: rotate(-2deg); }
+  100% { transform: rotate(0deg); }
+}
+
+/* fade */
+
+.fading {
+    opacity: 1;
+    animation: fade 10s infinite;
+}
+
+@keyframes fade {
+  0% { opacity: 70% }
+  50% { opacity: 90% }
+  100% { opacity: 70% }
+}
+
+/* Sections */
+
+/* Title */
 
 .title {
   background: url(../img/trunk.jpeg) no-repeat center center fixed;
@@ -358,18 +278,6 @@ header {
     grid-template-rows: auto;
     grid-gap: 3rem;
 }
-
-
-
-/*.title-container {
-    margin: auto;
-}*/
-
-
-/*.promo-container {
-    margin-right: 10px;
-    max-width: 200px;
-}*/
 
 #header-title {
     grid-row: 1;
@@ -409,23 +317,6 @@ header {
     filter: brightness(0.92);
 }
 
-@keyframes wiggle {
-    0% { transform: rotate(0deg); }
-   80% { transform: rotate(0deg); }
-   85% { transform: rotate(2deg); }
-   95% { transform: rotate(-2deg); }
-  100% { transform: rotate(0deg); }
-}
-
-.wiggle {
-  display: inline-block;
-  animation: wiggle 2s infinite;
-}
-
-.wiggle:hover {
-  animation: none;
-}
-
 #header-text-promo {
     grid-row: 2;
     grid-column: 2;
@@ -440,18 +331,6 @@ header {
 
 #header-text-promo img:hover {
     opacity: 80%;
-}
-
-
-.fading {
-    opacity: 1;
-    animation: fade 10s infinite;
-}
-
-@keyframes fade {
-  0% { opacity: 70% }
-  50% { opacity: 90% }
-  100% { opacity: 70% }
 }
 
 @media only screen and (max-width: 600px) {
@@ -470,50 +349,13 @@ header {
         justify-self: center;
     }
 
-    /*.title-icon {
-        margin: 1em auto 0 auto;
-    }*/
-
-    /*#header-image-promo {
-        grid-row: 3;
-        grid-column: 1;
-        text-align: center;
-    }*/
-
-/*    #header-image-promo img {
-        max-width: 200px;
-
-    }*/
-
     #header-text-promo {
         display: none;
     }
 
-   /* #header-text-promo img {
-        max-width: 100%;
-    }*/
 }
 
-/*@keyframes wave {
-     from {
-         transform: translateY(0);
-    }
-     to {
-         transform: translateY(-20px);
-    }
-}
-
-.wavetext span {
-     display: inline-block;
-     animation-duration: 2s;
-     animation-name: wave;
-     animation-iteration-count: infinite;
-     animation-direction: alternate;
-     transform: rotate(20deg);
-}*/
-
-
-/* bio section */
+/* Bio */
 
 .bio {
     display: grid;
@@ -681,7 +523,7 @@ header {
     }
 }
 
-/* feature section */
+/* Feature */
 
 .feature {
     background: url(../img/splash.jpeg) no-repeat center bottom;
@@ -695,7 +537,7 @@ header {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: auto;
-    grid-gap: 2rem;
+    grid-gap: 3rem;
 }
 
 #featureitem1 {
@@ -717,14 +559,24 @@ header {
     grid-row: 2;
     grid-column: 1/span 2;
     text-align: justify;
+    align-self: center;
+ /*   color: white;
+    padding: 10px;
+    background-image: url(../img/rain-forest-floor.gif);
+    background-size: cover;
+    background-position: 0% 90%;
+    opacity: 0.9;*/
 }
+
+/*#featureitem3 a {
+    color: white;
+}*/
 
 .feature a {
     text-decoration: none;
     font-weight: bold;
     color: black;
 }
-
 /* text-decoration-line: underline;
 text-decoration-style: wavy; */
 .feature a:hover {
@@ -758,239 +610,10 @@ text-decoration-style: wavy; */
     }
 }
 
+/* Footer */
 
-
-
-/*  Intro section  */
-
-.intro {
-    position: relative;
+#video-footer {
+    width: 100vw;
+    height: calc(100vw/1.77777778);
 }
 
-/*.intro__img {
-    box-shadow: var(--bs);
-}
-
-.section__subtitle--intro {
-    display: inline-block;
-}*/
-
-@media (min-width: 600px) {
-    .intro {
-        display: grid;
-        width: min-content;
-        margin: 0 auto;
-        grid-column-gap: 1em;
-        grid-template-areas:
-            "img title"
-            "img subtitle";
-        grid-template-columns: min-content max-content;
-    }
-
-    .intro__img {
-        grid-area: img;
-        min-width: 250px;
-        position: relative;
-        z-index: 2;
-    }
-
-    .section__subtitle--intro {
-        align-self: start;
-        grid-column: -1 / 1;
-        grid-row: 2;
-        text-align: right;
-        position: relative;
-        left: -1.5em;
-        width: calc(100% + 1.5em);
-    }
-}
-
-
-
-/*  My services section  */
-
-.my-services {
-    background-color: var(--clr-dark);
-    background-image: url(../img/services-bg.jpg);
-    background-size: cover;
-    /* background-blend-mode: multiply; */
-    color: var(--clr-light);
-    text-align: center;
-}
-
-.section__title--services {
-    color: var(--clr-accent);
-    position: relative;
-}
-
-.section__title--services::after {
-    content: '';
-    display: block;
-    width: 2em;
-    height: 1px;
-    margin: 0.5em auto 1em;
-    background: var(--clr-light);
-    opacity: 0.25;
-}
-
-.services {
-    margin-bottom: 4em;
-}
-
-.service {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-@media (min-width: 800px) {
-    .services {
-        display: flex;
-        max-width: 1000px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .service + .service {
-        margin-left: 2em;
-    }
-}
-
-
-.about-me {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-.about-me__img {
-    box-shadow: var(--bs);
-}
-
-@media (min-width: 600px) {
-    .about-me {
-        display: grid;
-        grid-template-columns: 1fr 200px;
-        grid-template-areas:
-            "title img"
-            "subtitle img"
-            "text img";
-        grid-column-gap: 2em;
-    }
-
-    .section__title--about {
-        grid-area: title;
-    }
-
-    .section__subtitle--about {
-        grid-column: 1 / -1;
-        grid-row: 2;
-        position: relative;
-        left: -1em;
-        width: calc(100% + 2em);
-        padding-left: 1em;
-        padding-right: calc(200px + 4em);
-    }
-
-    .about-me__img {
-        grid-area: img;
-        position: relative;
-        z-index: 2;
-    }
-}
-
-/* My Work */
-
-.my-work {
-    background-color: var(--clr-dark);
-    color: var(--clr-light);
-    text-align: center;
-}
-
-.portfolio {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
-
-.portfolio__item {
-    background: var(--clr-accent);
-    overflow: hidden;
-}
-
-.portfolio__img {
-    transition:
-        transform 750ms cubic-bezier(.5, 0, .5, 1),
-        opacity 250ms linear;
-}
-
-.portfolio__item:focus {
-    position: relative;
-    z-index: 2;
-}
-
-.portfolio__img:hover,
-.portfolio__item:focus .portfolio__img {
-    transform: scale(1.2);
-    opacity: .5;
-}
-
-
-/* footer */
-
-.footer {
-    background: #111;
-    color: var(--clr-accent);
-    text-align: center;
-    padding: 2.5em 0;
-    font-size: var(--fs-h3);
-
-}
-
-.footer a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.footer__link {
-    font-weight: var(--fw-bold);
-}
-
-.footer__link:hover,
-.social-list__link:hover {
-    opacity: .7;
-}
-
-.footer__link:hover {
-    text-decoration: underline;
-}
-
-.social-list {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    margin: 2em 0 0;
-    padding: 0;
-    max-width: 100%;
-}
-
-.social-list__item {
-    margin: 0 .5em;
-}
-
-.social-list__link {
-    padding: .5em;
-    color: white;
-}
-
-
-/* Individual portfolio item styles */
-
-.portfolio-item-individual {
-    padding: 0 2em 2em;
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-.portfolio-item-individual p {
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
