Move up vsf banner

--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@ h3 { font-size: var(--fs-h3) }
     -moz-background-size: cover;
     -o-background-size: cover;*/
     /*color: black;*/
-    padding: 3em 5em;
+    padding: 3em 5em 0 5em;
 
     display: grid;
     grid-template-columns: 1fr 3fr;
