--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ h3 { font-size: var(--fs-h3) }
 }
 
 .shows {
-    background: url(../img/lofi1.jpeg) no-repeat center center fixed;
+    background: url(../img/lofi-sharks.gif) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -296,6 +296,11 @@ h3 { font-size: var(--fs-h3) }
 @media only screen and (max-width: 600px) {
   .title {
     background: url(../img/votives_smaller2.gif) no-repeat center center;
+    background-size: cover;
+  }
+
+  .shows {
+    background: url(../img/lofi-sharks.gif) no-repeat center center;
     background-size: cover;
   }
 }
