--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@
 
 :root {
     --ff-primary: 'Courier Prime', sans-serif;
+    /*--ff-primary: 'IBM Plex Mono', monospace;*/
     --ff-secondary: 'Source Code Pro', monospace;
 
-    --fw-reg: 100;
-    --fw-bold: 900;
+    --fw-reg: 300;
+    --fw-bold: 600;
 
     --clr-light: #fff;
     --clr-dark: black;
@@ -32,11 +33,6 @@
         --fs-body: 1.125rem;
     }
 }
-
-/* enable this to add smooth scrolling */
-/* html {
-    scroll-behavior: smooth;
-}*/
 
 a {
   text-decoration: none;
@@ -147,9 +143,8 @@ h3 { font-size: var(--fs-h3) }
 
 @keyframes pulse {
   0% { transform: scale(1); }
-  50% { transform: scale(1.1);
+  50% { transform: scale(1.1); }
   100% { transform: scale(1); }
-  }
 }
 
 /* Glitter overlay */
@@ -227,8 +222,6 @@ h3 { font-size: var(--fs-h3) }
   opacity: 1;
 }
 
-/* Image effects */
-
 /* Wiggle */
 
 .wiggle {
@@ -248,7 +241,7 @@ h3 { font-size: var(--fs-h3) }
   100% { transform: rotate(0deg); }
 }
 
-/* fade */
+/* Fade */
 
 .fading {
     opacity: 1;
@@ -263,27 +256,11 @@ h3 { font-size: var(--fs-h3) }
 
 /* Sections */
 
-.section-title {
-    font-style: italic;
-    font-weight: 100;
-    opacity: 80%;
-    font-size: 80%;
-}
-
-.shows {
-    background: url(../img/lofi-sharks.gif) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    height: 100vh;
-    color: white;
-    padding: 1em 2em;
-}
 
 /* Title */
 
 .title {
-  background: url(../img/votives_smaller2.gif) no-repeat center center fixed;
+  background: url(../img/stalk/files2.gif) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -293,481 +270,337 @@ h3 { font-size: var(--fs-h3) }
   padding: 1em 2em;
 }
 
-@media only screen and (max-width: 600px) {
-  .title {
-    background: url(../img/votives_smaller2.gif) no-repeat center center;
-    background-size: cover;
-  }
-
-  .shows {
-    background: url(../img/lofi-sharks.gif) no-repeat center center;
-    background-size: cover;
-  }
-}
-
-.header {
-    display: grid;
-    grid-template-columns: 2fr 1fr 2fr;
-    grid-template-rows: auto;
-    grid-gap: 1rem;
-}
-
-#header-project-title {
-    grid-row: 1;
-    grid-column: 2/span 1;
-    z-index: 2;
-    text-align: center;
-    align-self: center;
-}
-
-.project-title-img {
-  margin: 6em auto 1em auto;
-  max-width: 400px;
-  padding: 10px;
-}
-
-#header-album-title {
-    grid-row: 2;
-    grid-column: 3/span 1;
-    z-index: 2;
-    text-align: center;
-    align-self: center;
-}
-
-#header-album-title a {
-  color: #bf6e7d;
-}
-
-.album-title-img {
-  margin: 6em auto 1em auto;
-  max-width: 200px;
-  padding: 10px;
-}
-
-.title-icon {
-  margin: 6em auto 1em auto;
-  max-width: 200px;
-  padding: 10px;
-}
-
-.title-text {
-  margin: auto;
-  width: 100%;
-  padding: 10px;
-  text-align: center;
-  font-weight: 100;
-  opacity: 70%;
-  font-size: 10px;
-}
-
-#header-image-promo {
-    grid-row: 1;
-    grid-column: 1;
-    text-align: end;
-    self-align: end;
-    z-index: 3;
-}
-
-#header-image-promo img {
-    max-width: 150px;
-}
-
-#header-image-promo img:hover {
-    filter: brightness(0.92);
-}
-
-#header-text-promo {
-    grid-row: 2;
-    grid-column: 2;
-    align-self: center;
-    text-align: center;
-    z-index: 3;
-}
-
-#header-text-promo img {
-    max-width: 400px;
-}
-
-#header-text-promo img:hover {
-    opacity: 80%;
-}
-
-@media only screen and (max-width: 600px) {
-    .header {
-        grid-template-columns: 1fr;
-    }
-
-    .header img {
-        max-width: 100%;
-    }
-
-    .header a {
-        margin-top: -10px;
-    }
-
-    #header-project-title {
-        grid-row: 1;
-        grid-column: 1;
-    }
-
-    #header-album-title {
-        grid-row: 2;
-        grid-column: 1;
-    }
-
-    .album-title-img {
-      width: 70%;
-    }
-
-    .header > div {
-        overflow: hidden;
-    }
-}
-
-/* Links */
-
-.links {
-    background: url(../img/sunset.jpg) no-repeat cover fixed;
-    display: grid;
-    grid-template-columns: 2fr 1fr 2fr;
-    grid-template-rows: auto;
-    grid-gap: 2rem;
-    background-color: black;
-    color: white;
-}
-
-/*.links a {
-  color: #fff5ee;
-}*/
-
-.links a {
-  color: #eed8dc;
-}
-
-#linkitem1 {
-    grid-row: 1;
-    grid-column: 1;
-    z-index: 1;
-    text-align: center;
-    align-self: center;
-}
-
-#linkitem2 {
-    grid-row: 1;
-    grid-column: 3;
-    z-index: 1;
-    text-align: center;
-    align-self: center;
-}
-
-#linkitem3 {
-    grid-row: 1;
-    grid-column: 2;
-    z-index: 1;
-    text-align: center;
-    align-self: center;
-}
-
-.link-column {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-gap: 1rem;
-}
-
-@media only screen and (max-width: 600px) {
-    .links {
-        grid-template-columns: 1fr;
-        padding-top: 2rem;
-    }
-
-    #linkitem1 {
-        grid-row: 1;
-        grid-column: 1;
-        z-index: 1;
-        text-align: center;
-        align-self: center;
-    }
-
-    #linkitem2 {
-        grid-row: 2;
-        grid-column: 1;
-        z-index: 1;
-        text-align: center;
-        align-self: center;
-    }
-
-    #linkitem3 {
-        grid-row: 3;
-        grid-column: 1;
-        z-index: 1;
-        text-align: center;
-        align-self: center;
-    }
-
-}
-
-
 /* Press */
 
-.press {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-gap: 2rem;
-    background-color: black;
-    color: white;
-}
+/*.press {*/
+/*    display: grid;*/
+/*    grid-template-columns: 1fr;*/
+/*    grid-template-rows: auto;*/
+/*    grid-gap: 2rem;*/
+/*    background-color: black;*/
+/*    color: white;*/
+/*}*/
 
-.press content {
-  text-align: justify;
-  align-self: center;
-}
+/*.press content {*/
+/*  text-align: justify;*/
+/*  align-self: center;*/
+/*}*/
 
-.press a {
-  color: #eedfd8;
-}
+/*.press a {*/
+/*  color: #eedfd8;*/
+/*}*/
 
 
 /* Interviews */
 
-.interviews {
-    display: grid;
-    grid-template-columns: 1fr 1.5fr;
-    grid-template-rows: auto;
-    grid-gap: 2rem;
-    background-color: black;
-    color: white;
-}
+/*.interviews {*/
+/*    display: grid;*/
+/*    grid-template-columns: 1fr 1.5fr;*/
+/*    grid-template-rows: auto;*/
+/*    grid-gap: 2rem;*/
+/*    background-color: black;*/
+/*    color: white;*/
+/*}*/
 
-.interviews a {
-  color: #dceed8;
-}
+/*.interviews a {*/
+/*  color: #dceed8;*/
+/*}*/
 
-#interview-portrait {
-    grid-row: 1;
-    grid-column: 1;
-    z-index: 1;
-    text-align: center;
-    align-self: center;
-}
+/*#interview-portrait {*/
+/*    grid-row: 1;*/
+/*    grid-column: 1;*/
+/*    z-index: 1;*/
+/*    text-align: center;*/
+/*    align-self: center;*/
+/*}*/
 
-/*#interview-portrait img {
-    max-width: 400px;
-}*/
+/*!*#interview-portrait img {*/
+/*    max-width: 400px;*/
+/*}*!*/
 
-#interview-links {
-    grid-row: 1;
-    grid-column: 2;
-    z-index: 1;
-    text-align: left;
-    align-self: center;
-}
+/*#interview-links {*/
+/*    grid-row: 1;*/
+/*    grid-column: 2;*/
+/*    z-index: 1;*/
+/*    text-align: left;*/
+/*    align-self: center;*/
+/*}*/
 
-@media only screen and (max-width: 600px) {
-    .interviews {
-        grid-template-columns: 1fr;
-        padding-top: 2rem;
-    }
+/*@media only screen and (max-width: 600px) {*/
+/*    .interviews {*/
+/*        grid-template-columns: 1fr;*/
+/*        padding-top: 2rem;*/
+/*    }*/
 
-    #interview-portrait {
-        grid-row: 1;
-        grid-column: 1;
-        z-index: 1;
-        text-align: center;
-        align-self: center;
-    }
+/*    #interview-portrait {*/
+/*        grid-row: 1;*/
+/*        grid-column: 1;*/
+/*        z-index: 1;*/
+/*        text-align: center;*/
+/*        align-self: center;*/
+/*    }*/
 
-    #interview-links {
-        grid-row: 2;
-        grid-column: 1;
-        z-index: 1;
-        text-align: center;
-        align-self: center;
-    }
-}
-
+/*    #interview-links {*/
+/*        grid-row: 2;*/
+/*        grid-column: 1;*/
+/*        z-index: 1;*/
+/*        text-align: center;*/
+/*        align-self: center;*/
+/*    }*/
+/*}*/
 
 
 /* Bio */
 
+.bio {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-template-rows: auto;
+    grid-gap: 2rem;
+    background-color: black;
+    color: white;
+    align-items: start;
+}
 
-.mini-bio {
+.bio-name {
+    grid-row: 1;
+    grid-column: 1;
+    z-index: 2;
+    align-self: start;
+    transform: rotate(-20deg);
+    max-width: 200px;
+}
+
+.bio-image {
+    grid-row: 1;
+    grid-column: 1;
+    z-index: 1;
+}
+
+.bio-text {
+    grid-row: 1;
+    grid-column: 2;
+    align-self: center;
+}
+
+.album {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: auto;
+    grid-gap: 2rem;
+    background-color: black;
+    color: white;
+}
+
+.album-name {
+    grid-row: 1;
+    grid-column: 2;
+    z-index: 2;
+    align-self: start;
+    margin-left: -30px;
+    transform: rotate(7deg);
+    max-width: 200px;
+}
+
+.album-image {
+    grid-row: 1;
+    grid-column: 2;
+    z-index: 1;
+    max-width: 500px;
+}
+
+.album-text {
+    grid-row: 1;
+    grid-column: 1;
+    align-self: center;
+}
+
+.single {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-template-rows: auto;
+    grid-gap: 2rem;
+    background-color: black;
+    color: white;
+}
+
+.single-name {
+    grid-row: 1;
+    grid-column: 1/span 2;
+    z-index: 2;
+    align-items: end;
+    transform: rotate(-10deg);
+    max-width: 200px;
+}
+
+.single-image {
+    grid-row: 1;
+    grid-column: 1;
+    z-index: 1;
+    max-width: 500px;
+}
+
+.single-text {
+    grid-row: 1;
+    grid-column: 2;
+    align-self: center;
+}
+
+.quote {
+    font-size: 0.75em;
+    font-style: italic;
+}
+
+.photos {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-gap: 2rem;
-    background-color: black;
-    color: white;
+    align-items: center;
 }
 
-.bio {
+.photo-name {
+    grid-row: 1;
+    grid-column: 1;
+    z-index: 2;
+    align-self: center;
+    text-align: center;
+    transform: rotate(3deg);
+    max-width: 175px;
+}
+
+.photo-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     grid-gap: 2rem;
-    background-color: black;
-    color: white;
 }
 
-#biopromoimage {
+.photo-grid-1 {
+    grid-row: 1;
+    grid-column: 1;
+    text-align: center;
+    align-self: center;
+}
+
+.photo-grid-2 {
     grid-row: 1;
     grid-column: 2;
-    z-index: 2;
-}
-
-#bioitem1 {
-    grid-row: 1;
-    grid-column: 3/span 3;
-    z-index: 3;
-    text-align: justify;
+    text-align: center;
     align-self: center;
 }
 
-#bioitem2 {
-    grid-row: 1/span 2;
-    grid-column: 4/span 2;
-    z-index: 1;
-}
-
-#bioitem3 {
-    grid-row: 2/span 2;
-    grid-column: 1/span 2;
-    z-index: 1;
-}
-
-#bioitem4 {
-    grid-row: 3/span 2;
-    grid-column: 2/span 3;
-    z-index: 2;
-    align-self: start;
-    text-align: justify;
-}
-
-#bioitem5 {
-    grid-row: 5;
-    grid-column: 1/span 3;
-    font-size: 16px;
-    text-align: justify;
-    align-self: start;
-}
-
-#bioitem6 {
-    grid-row: 6;
-    grid-column: 3/span 3;
-    z-index: 2;
-    text-align: justify;
-    align-self: start;
-}
-
-#bioitem7 {
-    grid-row: 5/span 2;
-    grid-column: 4/span 2;
-    z-index: 1;
+.photo-grid-3 {
+    grid-row: 2;
+    grid-column: 1;
+    text-align: center;
     align-self: center;
 }
 
-#bioitem7 img {
-    max-width: 80%;
-    margin: auto;
+.photo-grid-4 {
+    grid-row: 2;
+    grid-column: 2;
+    text-align: center;
+    align-self: center;
 }
 
-#bioitem8 {
-    grid-row: 6;
-    grid-column: 1/span 5;
-    z-index: 2;
-    align-self: end;
-    font-size: 14px;
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 75%;
 }
 
-#biovideo {
-    grid-row: 7;
-    grid-column: 2/span 3;
-    z-index: 1;
+.link-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 1rem;
 }
 
-@media only screen and (max-width: 600px) {
-    .press {
-      padding-top: 1rem;
-    }
+.link-column {
+    text-align: center;
+    align-self: center;
+    grid-gap: 1rem;
+}
+
+.link-column a {
+  color: #9e9aa6;
+}
+
+/*.shows {*/
+/*    background: url(../img/lofi-sharks.gif) no-repeat center center fixed;*/
+/*    -webkit-background-size: cover;*/
+/*    -moz-background-size: cover;*/
+/*    -o-background-size: cover;*/
+/*    height: 100vh;*/
+/*    color: white;*/
+/*    padding: 1em 2em;*/
+/*}*/
+
+@media only screen and (max-width: 800px) {
 
     .bio {
-        grid-gap: 3rem;
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 1fr;
+        align-items: center;
     }
-
-    .bio > div {
-        overflow: hidden;
-    }
-
-    #bioitem1 {
+    .bio-name {
         grid-row: 1;
-        grid-column: 1/span 2;
-        z-index: 3;
-        font-size: 18px;
+        grid-column: 1;
     }
-
-    #bioitem2 {
+    .bio-image {
+        grid-row: 1;
+        grid-column: 1;
+    }
+    .bio-text {
         grid-row: 2;
-        grid-column: 1/span 2;
-        z-index: 1;
+        grid-column: 1;
     }
-
-    #bioitem2 img {
-        opacity: 100%;
+    .album {
+        grid-template-columns: 1fr;
+        align-items: center;
     }
-
-    #bioitem3 {
-        grid-row: 4;
-        grid-column: 1/span 2;
-        z-index: 1;
+    .album-name {
+        grid-row: 1;
+        grid-column: 1;
+        align-self: center;
+        margin-left: auto;
+        margin-right: auto;
+        transform: rotate(3deg);
     }
-
-    #bioitem3 img {
-        opacity: 100%;
+    .album-image {
+        grid-row: 2;
+        grid-column: 1;
     }
-
-    #bioitem4 {
+    .album-text {
         grid-row: 3;
-        grid-column: 1/span 2;
+        grid-column: 1;
     }
-
-    #bioitem5 {
-        grid-row: 5;
-        grid-column: 1/span 2;
-        align-self: end;
-        z-index: 2;
+    .single {
+        grid-template-columns: 1fr;
+        align-items: center;
     }
-
-    #biopromoimage {
-        grid-row: 6;
-        grid-column: 1/span 2;
+    .single-name {
+        grid-row: 1;
+        grid-column: 1;
+        align-self: center;
+        margin-left: auto;
+        margin-right: auto;
+        transform: rotate(-3deg);
     }
-
-    #bioitem6 {
-        grid-row: 7;
-        grid-column: 1/span 2;
+    .single-image {
+        grid-row: 2;
+        grid-column: 1;
     }
-
-    #bioitem7 {
-        grid-row: 8;
-        grid-column: 1/span 2;
+    .single-text {
+        grid-row: 3;
+        grid-column: 1;
     }
-
-    #bioitem7 img {
-        max-width: 100%;
-        margin: auto;
+    .link-grid {
+        grid-template-columns: 1fr;
     }
-
-    #bioitem8 {
-        grid-row: 9;
-        grid-column: 1/span 2;
-        font-size: 1em;
-    }
-
-    #biovideo {
-        grid-row: 10;
-        grid-column: 1/span 2;
+    .center {
+        width: 100%;
     }
 }
 
@@ -822,20 +655,6 @@ h3 { font-size: var(--fs-h3) }
     opacity: 0.7;
 }
 
-#featureitem1 {
-    grid-row: 1;
-    grid-column: 1;
-    align-self: center;
-    justify-self: center;
-}
-
-#featureitem2 {
-    grid-row: 1;
-    grid-column: 2;
-    align-self: center;
-    text-align: justify;
-}
-
 .footer-panel {
     grid-row: 2;
     grid-column: 1;
@@ -880,25 +699,11 @@ h3 { font-size: var(--fs-h3) }
         padding: 3em 2em 0 2em;
     }
 
-    #featureitem1 {
-        grid-row: 1;
-        grid-column: 1;
-    }
-
-    #featureitem2 {
-        grid-row: 2;
-        grid-column: 1;
-    }
-
     .footer-panel {
         margin: 3em 0;
         padding: 1em;
         background-position: top;
     }
-
-   /* .footer-panel a {
-        color: #ffd5ea;
-    }*/
 
     .footer-bottom {
         margin: 1em;
@@ -911,5 +716,3 @@ h3 { font-size: var(--fs-h3) }
         font-size: 12px;
     }
 }
-
-
