--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,11 @@ h3 { font-size: var(--fs-h3) }
     font-size: 0.85em;
 }
 
+.press-quote {
+    display: block;
+    padding-bottom: 0.85em;
+}
+
 .photos {
     display: grid;
     grid-template-columns: 1fr;
@@ -644,6 +649,27 @@ h3 { font-size: var(--fs-h3) }
         max-width: 100%;
     }
     .single-text {
+        grid-row: 3;
+        grid-column: 1;
+    }
+    .single2 {
+        grid-template-columns: 1fr;
+        align-items: center;
+    }
+    .single2-name {
+        grid-row: 1;
+        grid-column: 1;
+        align-self: center;
+        margin-left: auto;
+        margin-right: auto;
+        transform: rotate(-3deg);
+    }
+    .single2-image {
+        grid-row: 2;
+        grid-column: 1;
+        max-width: 100%;
+    }
+    .single2-text {
         grid-row: 3;
         grid-column: 1;
     }
